# pqx

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake.in
pqx/: CMakeLists.txt  parquet.hpp  type_name.hpp
